feat: ajuste de vinculação de dados e proteção de rotas