@@ -21,12 +21,13 @@ public class TypeOfServicesService {
   private final TypeOfServiceRepository repository;
   private final UserRepository userRepository;
 
+  // CREATE
   @Transactional
   public TypeOfServiceDTO createService(TypeOfServiceCreateDTO dto) {
     Long ownerId = AuthUtil.getAuthenticatedUserId();
 
     UserEntity owner = userRepository.findById(ownerId)
-          .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado com id: " + ownerId));
+          .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado"));
 
     TypeOfServiceEntity entity = TypeOfServiceEntity.builder()
           .name(dto.getName())
@@ -37,14 +38,16 @@ public class TypeOfServicesService {
           .owner(owner)
           .build();
 
-    TypeOfServiceEntity saved = repository.save(entity);
-    return mapToDTO(saved);
+    return mapToDTO(repository.save(entity));
   }
 
+  // UPDATE
   @Transactional
   public TypeOfServiceDTO updateService(Long id, TypeOfServiceCreateDTO dto) {
-    TypeOfServiceEntity entity = repository.findById(id)
-          .orElseThrow(() -> new IllegalArgumentException("Serviço não encontrado com id: " + id));
+    Long ownerId = AuthUtil.getAuthenticatedUserId();
+
+    TypeOfServiceEntity entity = repository.findByIdAndOwnerId(id, ownerId)
+          .orElseThrow(() -> new IllegalArgumentException("Serviço não encontrado"));
 
     if (dto.getName() != null) entity.setName(dto.getName());
     if (dto.getDescription() != null) entity.setDescription(dto.getDescription());
@@ -52,37 +55,51 @@ public class TypeOfServicesService {
     if (dto.getCategory() != null) entity.setCategory(dto.getCategory());
     if (dto.getDuration() != null) entity.setDuration(dto.getDuration());
 
-    TypeOfServiceEntity updated = repository.save(entity);
-    return mapToDTO(updated);
+    return mapToDTO(repository.save(entity));
   }
 
+  // GET BY ID
   @Transactional(readOnly = true)
   public TypeOfServiceDTO getServiceById(Long id) {
-    TypeOfServiceEntity entity = repository.findById(id)
-          .orElseThrow(() -> new IllegalArgumentException("Serviço não encontrado com id: " + id));
+    Long ownerId = AuthUtil.getAuthenticatedUserId();
+
+    TypeOfServiceEntity entity = repository.findByIdAndOwnerId(id, ownerId)
+          .orElseThrow(() -> new IllegalArgumentException("Serviço não encontrado"));
+
     return mapToDTO(entity);
   }
 
+  // LIST ALL DO USER
   @Transactional(readOnly = true)
   public List<TypeOfServiceDTO> getAllServices() {
-    return repository.findAll().stream()
+    Long ownerId = AuthUtil.getAuthenticatedUserId();
+
+    return repository.findByOwnerId(ownerId)
+          .stream()
           .map(this::mapToDTO)
-          .collect(Collectors.toList());
+          .toList();
   }
 
+  // SEARCH (do user!)
   @Transactional(readOnly = true)
   public List<TypeOfServiceDTO> searchByName(String name) {
-    return repository.findByNameContainingIgnoreCase(name).stream()
+    Long ownerId = AuthUtil.getAuthenticatedUserId();
+
+    return repository.findByOwnerIdAndNameContainingIgnoreCase(ownerId, name)
+          .stream()
           .map(this::mapToDTO)
-          .collect(Collectors.toList());
+          .toList();
   }
 
+  // DELETE
   @Transactional
   public void deleteService(Long id) {
-    if (!repository.existsById(id)) {
-      throw new IllegalArgumentException("Serviço não encontrado com id: " + id);
-    }
-    repository.deleteById(id);
+    Long ownerId = AuthUtil.getAuthenticatedUserId();
+
+    TypeOfServiceEntity entity = repository.findByIdAndOwnerId(id, ownerId)
+          .orElseThrow(() -> new IllegalArgumentException("Serviço não encontrado"));
+
+    repository.delete(entity);
   }
 
   private TypeOfServiceDTO mapToDTO(TypeOfServiceEntity entity) {
@@ -98,4 +115,3 @@ public class TypeOfServicesService {
     return dto;
   }
 }
-
